spacing issue

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -109,7 +109,7 @@
 
 // CSS for the main body.
 #body-container{
-    padding-top:100px;
+    padding-top:150px;
     padding-bottom:50px;
     background-color: $darkgray;
     color:$lightgray;
